# rover-controller

./: .gitignore  LICENCE.md  README.md
src/: CMakeLists.txt  ConfigurationEntryWidgetFactory.cpp  ConfigurationEntryWidgetFactory.h  ConfigurationWidget.cpp  ConfigurationWidget.h  GstPipelineBuilder.cpp  GstPipelineBuilder.h  GstVideoWidget.cpp  GstVideoWidget.h  MainWindow.cpp  MainWindow.h  MessageHandler.cpp  MessageHandler.h
src/cmake/Modules/: FindGStreamer.cmake
src/configuration/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationEntry.cpp  ConfigurationEntry.h
src/gstvideo/: CMakeLists.txt  GstPipelineBuilder.cpp  GstVideoWidget.cpp  GstVideoWidget.h
src/map/: CMakeLists.txt  MapContent.cpp  MapContent.h  MapVisualizer.cpp  MapVisualizer.h  MapWindow.cpp  MapWindow.h  Mapper.cpp  Mapper.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  glwidget.cpp  glwidget.h  window.cpp  window.h
src/networking/: BufferedSocketReader.cpp  BufferedSocketReader.h  CMakeLists.txt  SocketTest.cpp  TcpReceiver.cpp  TcpReceiver.h  TcpSocket.cpp  TcpSocket.h
src/quaternions/: CMakeLists.txt  Quaternions.cpp  Quaternions.h
src/rovercontrol/: BasicSensor.cpp  BasicSensor.h  CMakeLists.txt  SensorProcessor.cpp  SensorProcessor.h  WheelEncoder.cpp  WheelEncoder.h
src/test/: CMakeLists.txt  MapVisualizerTest.cpp  StringUtilsTest.cpp  WheelEncoderTest.cpp
src/utils/: ArrayUtils.cpp  ArrayUtils.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  GeometryUtils.h  StringUtils.cpp  StringUtils.h
