PROJECT(rover-controller-system)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Qt5Gui)
FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Boost)

INCLUDE_DIRECTORIES(${Qt5Gui_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

EXECUTE_PROCESS(COMMAND pkg-config --cflags gstreamer-1.0
                OUTPUT_VARIABLE GSTREAMER_INCLUDE_FLAGS)
STRING(REPLACE "\n" "" GSTREAMER_INCLUCDE_FLAGS ${GSTREAMER_INCLUDE_FLAGS})

EXECUTE_PROCESS(COMMAND pkg-config --libs gstreamer-1.0
                OUTPUT_VARIABLE GSTREAMER_LIBRARY_FLAGS)
STRING(REPLACE "\n" "" GSTREAMER_LIBRARY_FLAGS ${GSTREAMER_LIBRARY_FLAGS})
message("CMAKE_LINKER_FLAGS: ${GSTREAMER_LIBRARY_FLAGS}")

set(CMAKE_AUTOMOC TRUE)

ADD_EXECUTABLE(rover-controller MainWindow.cpp GstVideoWidget.cpp)
SET_TARGET_PROPERTIES(rover-controller PROPERTIES COMPILE_FLAGS "-O2 -fno-inline-functions -Wall -Wextra -Wno-unused-parameter -fPIE")
SET_TARGET_PROPERTIES(rover-controller PROPERTIES COMPILE_FLAGS ${GSTREAMER_INCLUDE_FLAGS})
TARGET_LINK_LIBRARIES(rover-controller ${Qt5Gui_LIBRARIES} ${Qt5Core_LIBRARIES}
${Qt5Widgets_LIBRARIES} boost_system boost_filesystem gstreamer-1.0 gobject-2.0 glib-2.0 gstvideo-1.0)






